Minor fix. Fixed sidebaritem collapsed height

--- a/src/widgets/Sidebar/ui/SidebarItem/SidebarItem.module.scss
+++ b/src/widgets/Sidebar/ui/SidebarItem/SidebarItem.module.scss
@@ -34,6 +34,7 @@
     opacity: 0;
     width: 0;
     margin: 0;
+    height: 24px;
   }
 }
 
